JumpScript/tests/baselines/reference/symbolProperty54.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty54.jump(2,5): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.


==== tests/cases/conformance/es6/Symbols/symbolProperty54.jump (1 errors) ====
    var obj = {
        [Symbol.prototype]: 0
        ~~~~~~~~~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
    };